--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ a:focus {
 }
 
 .custom_nav-container .navbar-toggler .navbar-toggler-icon {
-  background-image: url(../images/menu.png);
+  background-image: url(menu.png);
   background-size: 55px;
 }
 
@@ -484,7 +484,7 @@ a:focus {
 }
 
 .client_section .owl-carousel .owl-nav .owl-prev {
-  background-image: url(../images/prev.png);
+  background-image: url(prev.png);
   left: 50%;
   -webkit-transform: translateX(-102%);
           transform: translateX(-102%);
@@ -492,7 +492,7 @@ a:focus {
 
 .client_section .owl-carousel .owl-nav .owl-next {
   right: 50%;
-  background-image: url(../images/next.png);
+  background-image: url(next.png);
   -webkit-transform: translateX(102%);
           transform: translateX(102%);
 }
@@ -508,7 +508,7 @@ a:focus {
 }
 
 .target_section {
-  background-image: url(../images/target-bg.jpg);
+  background-image: url(target-bg.jpg);
   background-size: cover;
   color: #ffffff;
   text-align: center;
